# Rusos

./: Cargo.toml  README.md  build.rs  run.sh
.cargo/: config.toml
src/kernel/: Cargo.toml  entry.rs  kernel.ld  lib.rs  main.rs  param.rs  printf.rs  start.rs
