cargo-features = ["per-package-target"]

[package]
name = "Rusos"
version = "0.1.0"
edition = "2021"
forced-target = "riscv64gc-unknown-none-elf"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "Rusos"
path = "src/kernel/main.rs"

[workspace]
members = [
    "src/kernel",
]
[workspace.dependencies]
libkernel = { path = "src/kernel", default-features = false }
[dependencies]
libkernel = { workspace = true, features = ["kernel"] }