cargo-features = ["per-package-target"]

[package]
name = "Rusos"
edition = "2021"
license.workspace = true
version.workspace = true
repository.workspace = true
forced-target = "riscv64gc-unknown-none-elf"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.package]
version = "0.1.0"
license = "MIT/Apache-2.0"
repository = "https://github.com/yota22721/Rusos"

[[bin]]
name = "Rusos"
path = "src/kernel/main.rs"

[workspace]
members = [
    "src/kernel",
]
[workspace.dependencies]
libkernel = { path = "src/kernel", default-features = false }
[dependencies]
libkernel = { workspace = true, features = ["kernel"] }
